deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: 2017-12-22T06:34:38Z
  generation: 1
  labels:
    app: hello-deploy
  name: hello-deploy
  namespace: default
  resourceVersion: "19570"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/hello-deploy
  uid: 2ed52c03-e6e2-11e7-a568-4a1e625bdca5
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-world
    spec:
      containers:
      - image: nigelpoulton/k8sbook:latest
        imagePullPolicy: Always
        name: k8sbook
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2017-12-22T06:34:38Z
    lastUpdateTime: 2017-12-22T06:34:38Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
